[Wayland] Screesharing using xdg-desktop-portal-wlr on Sway crashes latest Nightly: wl_surface@103: error 2: Buffer size (1001x64) is not divisible by scale (2)
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
People
(Reporter: jhnmlkvch9, Assigned: stransky)
References
(Blocks 2 open bugs)
Details
(Keywords: crash)
Crash Data
Attachments
(2 files)
Steps to reproduce:
Trying to screenshare (with zoom) in Sway via pipewire and xdg-desktop-portal-wlr crashes Firefox (109.0a1 (2022-11-28) (64-bit)):
To reproduce, On sway version 1.9-dev-dca0bb57 and latest xdg-desktop-portal-wlr/pipewire:
- Start zoom session on Firefox
- Hit Share screen
- Firefox asks for permission to see your screen with "Use operating system settings" selected in the drop down menu. (This is the only option available)
- Click "Allow"
- A "Sharing Indicator" window pops up with the following message:
"You are sharing another application window" and "Stop Sharing" button. - Simultaneously, you get an "overlay" that indicates which screen to share.
- Click the screen you want to share.
- <crash>
Here is the link to the report:
https://crash-stats.mozilla.org/report/index/e888f55f-832a-48b1-8434-31f680221129
Actual results:
Browser crashed
Expected results:
Browser start sharing screen.
Comment 1•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::WebRTC' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•3 years ago
|
||
wl_surface@92: error 2: Buffer size (1001x64) is not divisible by scale (2)
https://crash-stats.mozilla.org/report/index/e888f55f-832a-48b1-8434-31f680221129
An issue with Wayland and capture + painting, or maybe widget related? Bouncing to graphics for triage.
Comment 3•3 years ago
|
||
(In reply to Jonny Mako from comment #0)
Sway
(In reply to Jim Mathies [:jimm] from comment #2)
wl_surface@92: error 2: Buffer size (1001x64) is not divisible by scale (2)
That's bug 1795851.
| Reporter | ||
Comment 4•3 years ago
|
||
That bug does not seem to fix the issue in this case. I'm still getting the crash with latest nightly:
https://crash-stats.mozilla.org/report/index/08e7779d-0fe8-4108-bd57-7e1c10221212
| Reporter | ||
Comment 5•3 years ago
|
||
With updated build id: https://crash-stats.mozilla.org/report/index/966e1293-b8e5-44fc-9bd3-0cfac0221212
| Reporter | ||
Updated•3 years ago
|
Comment 6•3 years ago
|
||
Thanks for testing!
| Comment hidden (obsolete) |
| Assignee | ||
Updated•3 years ago
|
| Reporter | ||
Comment 8•3 years ago
|
||
FYI, here is a discussion on Sway to the related wlroots assert to enforce wayland protocol that might be causing this crash:
https://github.com/swaywm/sway/pull/6844#issuecomment-1353478644
and commit:
https://gitlab.freedesktop.org/wlroots/wlroots/-/commit/18595000f3a21502fd60bf213122859cc348f9af
| Assignee | ||
Comment 9•3 years ago
|
||
Do I understand correctly that this crash is about cursor surfaces? In such case it's a bug in Gtk and not in Firefox itself.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
| Reporter | ||
Comment 10•3 years ago
|
||
I've opened an issue with GTK:
https://gitlab.gnome.org/GNOME/gtk/-/issues/5463
Comment 11•3 years ago
|
||
Martin, could you please apply a severity to this one?
| Assignee | ||
Updated•3 years ago
|
| Comment hidden (obsolete) |
Comment 13•3 years ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #9)
Do I understand correctly that this crash is about cursor surfaces? In such case it's a bug in Gtk and not in Firefox itself.
I believe it's the other way around: wlroots allows cursor surfaces to use the protocol incorrectly, but other surfaces trying to do so will trigger the error seen in this bug.
Comment 14•3 years ago
|
||
Sorry for removing the keyword earlier but there is a recent change in the ranking, so the bug is again linked to a topcrash signature, which matches the following criterion:
- Top 10 desktop browser crashes on nightly
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 15•3 years ago
|
||
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
Comment 17•3 years ago
|
||
Based on the topcrash criteria, the crash signature linked to this bug is not a topcrash signature anymore.
For more information, please visit auto_nag documentation.
Updated•3 years ago
|
Comment 18•3 years ago
|
||
Comment 19•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Comment 20•3 years ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox112towontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•3 years ago
|
Comment 22•3 years ago
|
||
Copying crash signatures from duplicate bugs.
Updated•3 years ago
|
| Reporter | ||
Comment 25•3 years ago
|
||
I'm still seeing this crash in latest nightly: 114.0a1 (2023-04-18) (64-bit)
| Assignee | ||
Comment 26•3 years ago
|
||
(In reply to Jonny Mako from comment #25)
I'm still seeing this crash in latest nightly: 114.0a1 (2023-04-18) (64-bit)
Please file a new bug for it and attach a backtrace of the crash there (from about:crashes).
Thanks.
| Reporter | ||
Comment 30•3 years ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #26)
(In reply to Jonny Mako from comment #25)
I'm still seeing this crash in latest nightly: 114.0a1 (2023-04-18) (64-bit)
Please file a new bug for it and attach a backtrace of the crash there (from about:crashes).
Thanks.
I can reliable reproduce this crash, but the crash reporter does not open. How do I force the crash reporter to open?
| Reporter | ||
Comment 31•3 years ago
|
||
(In reply to Jonny Mako from comment #30)
(In reply to Martin Stránský [:stransky] (ni? me) from comment #26)
(In reply to Jonny Mako from comment #25)
I'm still seeing this crash in latest nightly: 114.0a1 (2023-04-18) (64-bit)
Please file a new bug for it and attach a backtrace of the crash there (from about:crashes).
Thanks.I can reliable reproduce this crash, but the crash reporter does not open. How do I force the crash reporter to open?
Also there are no crashes in Help->More Troubleshooting Information
| Reporter | ||
Comment 32•3 years ago
|
||
Here is the next best thing I could think of, given I'm unable to get the crash reporter to appear. Attaching wayland debug log.
| Reporter | ||
Comment 33•3 years ago
|
||
If someone can help me fix the issue with crash reporter, I'll open a new report as requested by Martin @stransky.
| Reporter | ||
Comment 34•3 years ago
|
||
Also, the crash happens when display scale factor is anything other than 1. My entry in Sway config is:
output eDP-1 pos 0 0 mode 3840x2160 scale 1.5
Comment 35•3 years ago
|
||
Let's continue in bug 1832158 (slightly different crash reason).
Updated•3 years ago
|
Description
•