Bug 1803016 [Wayland] Don't commit wl_buffer if buffer scale doesn't match its size r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D173814